welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:36: error: '=' expected but ')' found.
def faireDiag) {
             ^PictureMono3:46: error: illegal start of simple expression
}
^